[package]
name = "ll"
version = "0.0.9"
edition = "2021"

[dependencies]
bytesize = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
glob = "0.3.1"
pathdiff = "0.2.2"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["serde_derive"] }
supports-color = "3.0.1"
thiserror = "1.0"
toml = "0.8.19"
